@@ -10,6 +10,7 @@
 - compat-29: Add ~compiled-function-p~.
 - compat-29: Add ~plist-get~ generalized variable.
 - compat-29: Add ~plistp~.
+- compat-29: Add ~list-of-strings-p~.
 
 * Release of "Compat" Version 29.1.2.0
 
